--- a/stil.css
+++ b/stil.css
@@ -242,7 +242,7 @@ z-index: 1;
 }
 
 .wall_3 {
-background: url(images/3.jpg) no-repeat;
+background: url(images/3.JPG) no-repeat;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
